@@ -22,8 +22,6 @@ import sys
 import code
 import threading
 
-import pygtk
-pygtk.require("2.0")
 import gobject
 import gtk
 
