@@ -5,8 +5,6 @@
 #  See www.python.org/2.2/license.html for
 #  license details.
 #
-import pygtk
-pygtk.require('2.0')
 import gtk
 import gtk.gdk
 
