@@ -1,5 +1,8 @@
 New entries should be added at the top
 
+2005-09-14 Factored out auto date locator/formatter factory code into
+           matplotlib.date.date_ticker_factory
+
 2005-09-13 Added Mark's axes positions history patch #1286915 
 
 2005-09-09 Added support for auto canvas resizing with
